--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,7 +96,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   margin-top: 120px;
 }
 
@@ -124,4 +123,65 @@
   font-weight: 700;
   border-top: 48px;
   border-left: 32px;
+}
+
+.schedule {
+  position: relative;
+  text-align: center;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.schedule-section {
+  background: linear-gradient(
+    180deg,
+    rgba(255, 0, 0, 0.1) 0%,
+    rgba(255, 0, 0, 0) 100%
+  );
+  width: 1320px;
+  height: 600px;
+  border-radius: 16px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 120px;
+}
+
+.schedule-sub-section {
+  position: relative;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin-top: 150px;
+}
+
+.schedule-title {
+  color: #070211;
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 56px;
+}
+
+.schedule-title .schedule-title-head {
+  color: #f00;
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 56px;
+}
+
+.schedule-btn {
+  display: inline-flex;
+  padding: 16px 32px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  background: #f00;
+  color: white;
+  border: 0;
 }
